<resources>
    <string name="app_name">ContactsApp</string>
    <string name="title">Mobile Top Up</string>
    <string name="contacts">Contacts</string>
    <string name="submit">Submit</string>
    <string name="contact_hint">Search contacts</string>
    <string name="toast_warning_message">Without access to contacts, items can\'t be synced.</string>
    <string name="snacbkar_warning_message">This app needs access to contacts. Please grant access in the app settings.</string>
    <string name="go_to_settings_btn">Go to settings</string>
    <string name="no_results">No results</string>
    <string name="no_results_message">Contact with this phone number does not exist</string>

    <string name="details_title">Contact info</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="email">E-Mails</string>
    <string name="significant_dates">Significant dates</string>
    <string name="related_persons">Related persons</string>

    <string name="company">Company</string>
    <string name="note">Note</string>
    <string name="add_contact">Add contact</string>

    <string name="add_first_name">Add name</string>
    <string name="first_name_hint">First name</string>

    <string name="add_last_name">Add last name</string>
    <string name="last_name_hint">Last name</string>

    <string name="add_number">Add number</string>
    <string name="number_hint">Number</string>

    <string name="add_photo">Add photo</string>

    <string name="image_was_not_selected">Image was not selected. Please try again.</string>

    <string name="save_button">Save</string>
    <string name="perm_denied_not_saved">Permission denied. Contact not saved.</string>

    <string name="successfully_added">Item added successfully.</string>

    <string name="needs_access_write">"The app needs to have an access to your contacts to add an item."</string>
</resources>