<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addContactFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/addContactTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/add_contact_margin_horizontal"
        android:layout_marginTop="@dimen/add_contact_margin_top"
        android:text="@string/add_contact"
        android:textSize="@dimen/add_contact_title_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addFirstNameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/add_contact_margin_horizontal"
        android:layout_marginTop="@dimen/add_contact_margin_top"
        android:text="@string/add_first_name"
        android:textSize="@dimen/add_contact_category_title_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addContactTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addFirstNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/add_contact_margin_horizontal"
        android:layout_marginTop="@dimen/add_contact_input_margin_top"
        app:endIconDrawable="@drawable/baseline_clear_24"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFirstNameTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addFirstNameInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/first_name_hint"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/addLastNameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/add_contact_margin_horizontal"
        android:layout_marginTop="@dimen/add_contact_margin_top"
        android:text="@string/add_last_name"
        android:textSize="@dimen/add_contact_category_title_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addFirstNameLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addLastNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/add_contact_margin_horizontal"
        android:layout_marginTop="@dimen/add_contact_input_margin_top"
        app:endIconDrawable="@drawable/baseline_clear_24"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLastNameTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/last_name_hint"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/addNumberTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/add_contact_margin_horizontal"
        android:layout_marginTop="@dimen/add_contact_margin_top"
        android:text="@string/add_number"
        android:textSize="@dimen/add_contact_category_title_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLastNameLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addNumberLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/add_contact_margin_horizontal"
        android:layout_marginTop="@dimen/add_contact_input_margin_top"
        app:endIconDrawable="@drawable/baseline_clear_24"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNumberTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addNumberInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/number_hint"
            android:inputType="number"
            android:maxLines="1"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/addPhotoTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/add_contact_margin_horizontal"
        android:layout_marginTop="@dimen/add_contact_margin_top"
        android:text="@string/add_photo"
        android:textSize="@dimen/add_contact_category_title_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNumberLayout" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="@dimen/add_contact_image_width_height"
        android:layout_height="@dimen/add_contact_image_width_height"
        android:layout_marginHorizontal="@dimen/add_contact_margin_horizontal"
        android:layout_marginTop="@dimen/add_contact_input_margin_top"
        android:contentDescription="@null"
        android:src="@drawable/person_image_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhotoTitle" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/addPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:src="@drawable/baseline_add_a_photo_24"
        app:layout_constraintBottom_toBottomOf="@+id/photo"
        app:layout_constraintEnd_toEndOf="@+id/photo"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/photo" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/add_contact_margin_horizontal"
        android:layout_marginTop="@dimen/add_contact_margin_top"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhotoButton" />

</androidx.constraintlayout.widget.ConstraintLayout>