<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchAndResultsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_margin_top"
        android:fontFamily="@font/helvetica"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/title_color"
        android:textSize="@dimen/title_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/horizontalLineUnderHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/horizontal_line_height"
        android:layout_marginTop="@dimen/horizontal_line_margin_top"
        android:background="@color/horizontal_line_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTitle" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/phone_number_margin_horizontal"
        android:layout_marginTop="@dimen/phone_number_margin_top"
        android:fontFamily="@font/helvetica"
        android:text="@string/contacts"
        android:textSize="@dimen/phone_number_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLineUnderHeader" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberInputLayout"
        style="@style/CustomInputFieldColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/input_field_margin_horizontal"
        android:layout_marginTop="@dimen/input_field_margin_top"
        app:boxCornerRadiusBottomEnd="@dimen/input_field_radius"
        app:boxCornerRadiusBottomStart="@dimen/input_field_radius"
        app:boxCornerRadiusTopEnd="@dimen/input_field_radius"
        app:boxCornerRadiusTopStart="@dimen/input_field_radius"
        app:endIconDrawable="@drawable/baseline_clear_24"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_hint"
            android:maxLines="1"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/recycler_view_margin_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberInputLayout" />

    <include
        android:id="@+id/noResultLayout"
        layout="@layout/no_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/rvItems" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addContactFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/fab_margin_end"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        android:contentDescription="@string/add_contact"
        android:src="@drawable/baseline_person_add_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>